--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h1>Olá, mundo!</h1>
-    <P>Já me livrei da maldição</P>
+    <P>Pronto</P>
     <script>
         //java script
         window.alert('Minha primeira mensagem')
