--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h1>Olá, mundo!</h1>
-    <P>Já me livrei da maldição</P>
+    <P>Curso de java Script</P>
     <script>
         //java script
         var nome = window.prompt('Qual o seu nome?')
