--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -19,10 +19,10 @@
 
     <script>
         window.alert('Vamos começar!')
-        var nome = window.prompt('Qual o seu nome?')
-        document.write(`Olá ${nome}!<br> Seu nome tem ${nome.length} letras<br>`)
-        document.write( `Seu nome em maiúsculo é ${nome.toUpperCase()}<BR>`)
-        document.write(`Seu nome em minúsculo é ${nome.toLowerCase()}<br>`)
+        var nome = window.prompt('Qual o seu Nome?')
+        document.write(`Olá ${nome}!<br> Seu nome tem: ${nome.length} letras<br>`)
+        document.write( `Seu nome em maiúsculo é: ${nome.toUpperCase()}<BR>`)
+        document.write(`Seu nome em minúsculo é: ${nome.toLowerCase()}<br>`)
     
     </script>
     
