--- a/aula10/ex007.html
+++ b/aula10/ex007.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Somador Números</title>
+    <style>
+        body {
+            font: normal 18pt Arial;
+        }
+        input {
+            font: normal 18pt Arial;
+            width: 100px; /*largura do "quadrado"*/
+        }
+        div#res {
+            margin-top: 20px; /*espaçamento do resultado*/
+        }
+    </style>
 </head>
 <body>
     <h1>Somando Valores</h1>
-    <input type="number" nome="txtn1" id="textn1"> + 
+    <input type="number" nome="txtn1" id="txtn1"> + 
     <input type="number" nome="txtn2" id="txtn2">
     <input type="button" value="Somar" onclick="somar()">
     <div id="res">Resultado</div>
@@ -21,9 +33,9 @@
             var n1 = Number(tn1.value) //transformando a variavel tn1 de string para valor numerico
             var n2 = Number(tn2.value)
             var s = n1 + n2//variável soma
-            res.innerHTML = `A soma entre ${n1} e ${n2} é igual a ${s}`
+            res.innerHTML = `A soma entre ${n1} e ${n2} é igual a <strong>${s}</strong>`
         }
-        //NÃO DEU CERTO... CORRIGIR AMANHÃ
+        
     </script>
     
 </body>
