--- a/aula11/ex011.html
+++ b/aula11/ex011.html
@@ -7,25 +7,6 @@
     <title>Nacionalidade</title>
 </head>
 <body>
-    <!--<h1>Você está no Brasil</h1>
-    Você vive em qual país?   <input type = "text" id= "pais">
-    <input type="button" value="verificar" onclick="verificar()">
-    <div id = "res">
-    </div>
-
-    <script>
-        function verificar(){
-            var pais= document.querySelector('input#pais')
-            var res= document.querySelector('div#res')
-            var respais= string (pais.value)
-            res.innerHTML =`<p>Você mora no país: ${respais}!<p>`
-            if(naci!="Brasil"){
-                res.innerHTML+= `<p>Você é <strong>estrangeiro</strong>!<p>`
-            }else{
-                res.innerHTML+=`<p>Você é <strong>brasileiro</strong>!`
-            }
-        }
-    </script>-->
 
     <h1>Sua nacionalidade</h1>
     Você vive em qual país?   <input type = "text" id= "pais">
@@ -35,15 +16,16 @@
     
     <script>
         function clicar(){
-            var paisp= document.getElementById('pais')
-            var res=document.getElementById('res')
-            var vel= String (paisp.value).toLocaleLowerCase();
-            res.innerHTML=`Seu pais é ${vel}!`
-            if(vel!= 'Baril'){
-                res.innerHTML+= 'Você é estrangeiro!'
+            var paisp= document.querySelector('input#pais')
+            var res=document.querySelector('div#res')
+            var vel= String (paisp.value).toUpperCase();
+            res.innerHTML=`<p>Seu pais é ${vel}!<p>`
+            if(vel!= "Brasil"){
+                res.innerHTML+= '<p>Você é estrangeiro!<p>'
             }else{
-                res.innerHTML+='Você é brasileiro!'
+                res.innerHTML+='<p>Você é brasileiro!<p>'
             }
         }
+    </script>
 </body>
 </html>
