--- a/aula14/ex017/modelo.html
+++ b/aula14/ex017/modelo.html
@@ -4,23 +4,27 @@
     <meta charset="pt-BR">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verificador de idade</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1> Verificador de Idade</h1>
+        <h1> Tabuada</h1>
     </header>
     <section>
         <div>
-        
+            <p> Número: <input type="number" name="num" id="txtn">
+            <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
         </div>
         <div>
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número acima</option>
+            </select>
             
         </div>
     </section>
     <footer>
-        <p>&copy;Curso em Vídeo</p>
+        <p>&copy;CursoemVídeo</p>
     </footer>
     <script src="script.js"></script>
 </body>
